# learning_gradient_flow

./: .gitignore  README.md  pyproject.toml
examples/: config.json  ex1_2vars.py  ex1_2vars_gif.py  ex3_newton.py  ex4_scattering.py  ex4_scattering_tr.py  ex5_deep.py  ex5_deep_plot.py  ex5_deep_random.py  example_config.py  run_all_examples.py
notebooks/: adam_gradient_flow_optimizer.ipynb  adam_ode.ipynb  adam_ode_learned.ipynb  dev_wsindy.ipynb  multiple_trajectories.ipynb  plot_sings.ipynb  poorly_conditioned_quadratic.ipynb  sindy_sings.txt  test_gradient_flow_optimizer.ipynb
src/learning_gradient_flow/: adam_flow_optimizer.py  gradient_flow_optimizer.py  pinns_tools.py  sindy_tools.py
tests/: test_flatten.py  test_import.py  test_optimizer_smoke.py  test_sindy.py  test_sparse_lorentz.py  test_wsindy.ipynb
