[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning_gradient_flow"
version = "0.1.0"
readme = "README.md"
dependencies = [
  "numpy",
  "torch>=2.0",
  "torchdiffeq",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra -q",
  "--color=yes"
]
testpaths = "tests"
